2006-11-18  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/components.R (no.clusters) : added
	* interfaces/R/src/rinterface.c (R_igraph_no_clusters) : added

2006-11-14  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/structure.generators.R 
	(graph.extended.chordal.ring) : added
	* interfaces/R/src/rinterface.c (R_igraph_extended_chordal_ring) :
	added

2006-11-09  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/src/rinterface.c (R_igraph_spinglass_my_community) :
	return more data: cohesion, adhesion, inner & outer links

2006-11-07  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/community.R (spinglass.community) :
	removed unneccesary arguments from .Call
	* interfaces/R/src/rinterface.c (R_igraph_spinglass_my_community) :
	removed unneccesary arguments

2006-11-06  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/community.R (spinglass.community) : added
	* interfaces/R/src/rinterface.c (R_igraph_spinglass_community) 
	(R_igraph_spinglass_my_community) : added

2006-10-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) :
	added 'weighted' argument to create weighted graphs

2006-10-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (constraint) :
	weight parameter added
	* interfaces/R/igraph/src/rinterface.c (R_igraph_constraint) :
	weight parameter added

2006-10-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (graph.vertex.mincut) : removed
	(graph.maxflow, graph.mincut, vertex.connectivity, edge.connectivity)
	(edge.disjoint.paths, vertex.disjoint.paths, graph.adhesion)
	(graph.cohesion) : rewritten
	* interfaces/R/src/rinterface.c (R_igraph_edge_connectivity_pair)
	(R_igraph_vertex_connectivity_pair, R_igraph_minimum_cut) 
	(R_igraph_minimum_vertex_cut_pair, R_igraph_minimum_vertex_cut) :
	removed
	(R_igraph_mincut_value, R_igraph_st_vertex_connectivity)