@@ -3,6 +3,9 @@
 	* interfaces/R/igraph/R/components.R (no.clusters) : added
 	* interfaces/R/src/rinterface.c (R_igraph_no_clusters) : added
 
+	* interfaces/R/igraph/R/minimum.spannin.tree.R (minimum.spanning.tree)
+	: use 'weight' edge attribute automatically if present
+	
 2006-11-14  Gabor Csardi  <csardi@kzoo.edu>
 
 	* interfaces/R/igraph/R/structure.generators.R 
